extra space so Stopwatch is visible on long text.

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ footer, header, hgroup, menu, nav, section
 }
 body {
 	line-height: 1;
-	padding-bottom: 3rem;
+	padding-bottom: 4rem;
 }
 footer {
     position: fixed;
